--- a/assets/btcmarkets.html
+++ b/assets/btcmarkets.html
@@ -15,19 +15,49 @@
     <!--h2>Home</h2-->
 
 	<h4>
-
   <a href="/index.html">home</a>
-  <a href="/bitstamp.html">bitstamp</a>
   <a href="/btcmarkets.html">btcmarkets</a>
-  <a href="/report.html">report</a>
-
 	</h4>
+  <form action="">
+    ticks: <input type="text" id="myticks"  value="500" ><br>
+  </form>
+
+  <!--span><input class="submit" type="button" value="Submit" onclick="update_chart()"></span-->
+  <!-- span><input class="submit" type="button" value="add_series() test" onclick="add_series('bitstamp.topask')"></span -->
+
+  <span> 
+    <div id="mytime" style="width:100px;height:30px;"></div>
+    <div id="starttime" ></div>
+  </span> 
+
+    <div id="placeholder" style="width:900px;height:500px;"></div>
 
     <p>Simple example. </p>
 
 
   <!-- ok, we want to try to load a json file -->
 
+<script type="text/javascript">
+
+
+  $(function () {
+    // start
+    all_series = [];
+    graph = null ;
+  //  last_id = -1;
+	last_timestamp = null;
+
+    add_series( 'btcmarkets.top_bid' );
+	add_series( 'btcmarkets.top_ask' );
+
+
+	// if we do separate ajax requests ...
+	// ok. - over the same connection.
+	// when we add a layer we'll have to do it all again...
+	continuous_update();
+  });
+
+</script>
 
  </body>
 </html>
