--- a/assets/report.html
+++ b/assets/report.html
@@ -11,10 +11,12 @@
 <script type="text/javascript">
 </script>
 
-    <body>
-    <h2>Report</h2>
-
+	<h4>
 	<a href="/index.html">home</a>
+	<a href="/report.html">report</a>
+
+	</h4>
+
 	<br>
 	<textarea id="myresultform" rows="20" cols="100">
 My text
