--- a/assets/report.html
+++ b/assets/report.html
@@ -23,7 +23,7 @@ My text
 	</textarea>
 
 	<br>
-	<textarea id="myinputform" rows="5" cols="80">
+	<textarea id="myinputform" rows="10" cols="80">
 Query...
 	</textarea>
 
@@ -49,7 +49,11 @@ $(function () {
 
 	console.log( 'hithere' );
 
-	$('#myinputform')[0].value =  "select id, t, content->'url' as url\nfrom events\nwhere msg = 'order2'\norder by id desc limit 10";
+	order_query = "select id,\n t,\n now() - t as duration,\n content->'url':: varchar as url,\n left( (content->'data')::varchar, 50) as data\nfrom events\nwhere msg = 'order2'\norder by id desc  limit 10";
+
+	error_query = "select id, t,\n now() - t as duration, content::varchar as content\nfrom events\nwhere msg = 'error'\norder by id desc limit 10";
+
+	$('#myinputform')[0].value = order_query; 
 	$('#myresultform')[0].value = '';
 
 });
@@ -80,7 +84,7 @@ $(function () {
 				//console.log( 'object now a ' + typeof value ) ;
 
 
-				 //value = JSON.stringify(value, undefined, 4);
+				 value = JSON.stringify(value, undefined, 4);
 					// is it an array or is it a string. /? there is no each -- 
 				//$('#myresultform')[0].value = $.each( value, function( key, val) { 
 				//	console.log( key + ' ' + val ); //return '123' ;
@@ -148,7 +152,7 @@ $(function () {
 
 	function submitShowOrders( x)
 	{
-		$('#myinputform')[0].value = "select id,msg, content->'url':: varchar as url, left( (content->'data')::varchar, 50) from events where msg = 'order2' order by id desc  limit 10";
+		$('#myinputform')[0].value = order_query;  
 
 //			 "select id, t, content->'url' as url\nfrom events\nwhere msg = 'order2'\norder by id desc limit 10";
 		submitTryit( 'dummy'  );
@@ -156,7 +160,7 @@ $(function () {
 
 	function submitShowErrors( x)
 	{
-		$('#myinputform')[0].value = "select id, t, left( content::varchar, 30) as error\nfrom events\nwhere msg = 'error'\norder by id desc limit 10";
+		$('#myinputform')[0].value = error_query; 
 		submitTryit( 'dummy'  );
 	}
 
