ok got it kind of working

--- a/assets/btsx_btc.html
+++ b/assets/btsx_btc.html
@@ -33,6 +33,8 @@
 
     add_series('btsx_btc.top_ask'); 
     add_series('btsx_btc.top_bid'); 
+    add_series('btsx_btc.bid_10'); 
+    add_series('btsx_btc.bid_30'); 
 	continuous_update();
   });
 </script>
