--- a/assets/btsx_btc.html
+++ b/assets/btsx_btc.html
@@ -31,10 +31,13 @@
     graph = null ;
 	last_timestamp = null;
 
+    add_series('btsx_btc.ask_30'); 
+    add_series('btsx_btc.ask_10'); 
     add_series('btsx_btc.top_ask'); 
     add_series('btsx_btc.top_bid'); 
     add_series('btsx_btc.bid_10'); 
     add_series('btsx_btc.bid_30'); 
+
 	continuous_update();
   });
 </script>
