add bids percent

--- a/assets/btsx_btc.html
+++ b/assets/btsx_btc.html
@@ -37,6 +37,7 @@
     add_series('btsx_btc.top_bid'); 
     add_series('btsx_btc.bid_10'); 
     add_series('btsx_btc.bid_30'); 
+    add_series('btsx_btc.bids_percent'); 
 
 	continuous_update();
   });
