--- a/assets/bitstamp.html
+++ b/assets/bitstamp.html
@@ -19,6 +19,15 @@
   <a href="/index.html">home</a>
   <a href="/bitstamp.html">bitstamp</a>
 	</h4>
+
+
+<select>
+  <option value="volvo">Volvo</option>
+  <option value="saab">Saab</option>
+  <option value="opel">Opel</option>
+  <option value="audi">Audi</option>
+</select>
+
   <form action="">
     ticks: <input type="text" id="myticks"  value="500" ><br>
   </form>
